2005-12-01  Michael Williamson  <mwilliamson@users.sourceforge.net>

	* src/set.c (set_size): Do not allow size values <= 0.

2005-11-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c (apply_zoom): Fix for "set view map; plot x" and y-axis
	reversal when mouse zooming.

2005-11-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/datafile.c (df_set_datafile_binary): Give an error message for
	'set datafile binary' (without any option).

2005-11-27  Juergen Wieferink  <wieferink@freenet.de>

	* src/parse.c (const_string_express parse_additive_expression)
	src/parse.h src/eval.c (pop_or_convert_from_string) src/eval.h 
	src/util.c (try_to_get_string) src/internal.c (f_minus)
	src/set.c (set_label set_xyzlabel load_tic_user):

	Clean up parsing and evaluation of try_to_get_string() by moving the
	test against STRING_RESULT_ONLY into the actual parsing code. Now if
	a + or - operator is encountered while parsing something that is 
	supposed to be a string, no further tokens are processed. Before, this
	triggered an arithmetic operation on the string that had to be thrown
	out afterwards.

2005-11-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_arrow): Rewrite set_arrow() to behave the same as
	set_label() and other "set <foo>" routines; attribute changes for any
	one arrow are now incremental.

	* src/misc.c (arrow_parse) src/plot2d.c src/plot3d.c src/set.c:
	Remove 2nd parameter of arrow_parse, since it is no longer used by
	any callers.

	* src/axis.c (axis_checked_extend_empty_range) src/plot3d.c:
	Suppress warning message "empty z range" when mode is "set view map".

2005-11-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pm3d.dem: Change one splot from "with lp palette" to
	"with lines palette".

2005-11-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots) src/plot3d.c (eval_3dplots):
	Bugfix: Arrow style used by "with vector" was getting over-written
	during subsequent command line parsing.
