@@ -33,6 +33,17 @@
 #ifndef GNUPLOT_GPLT_X11_H
 #define GNUPLOT_GPLT_X11_H
 
+#if defined(HAVE_SYS_SELECT_H) && !defined(VMS)
+# include <sys/select.h>
+#endif
+
+#ifndef FD_SET
+# define FD_SET(n, p)    ((p)->fds_bits[0] |= (1 << ((n) % 32)))
+# define FD_CLR(n, p)    ((p)->fds_bits[0] &= ~(1 << ((n) % 32)))
+# define FD_ISSET(n, p)  ((p)->fds_bits[0] & (1 << ((n) % 32)))
+# define FD_ZERO(p)      memset((char *)(p), '\0', sizeof(*(p)))
+#endif /* not FD_SET */
+
 #define X11_COMMAND_BUFFER_LENGTH 1024
 
 #if defined(WITH_IMAGE) || defined(BINARY_X11_POLYGON)
